--- a/smart-valve.html
+++ b/smart-valve.html
@@ -234,9 +234,9 @@
         <input type="text" id="node-input-cycleDuration" style="width:60px !important; text-align: right;" placeholder="duration"></input> 
     </div>
     <div class="form-row">      
-        <p style="padding-top: 10px"><i class="fa fa-chain-broken"></i> Allow manual</p> 
-        <input type="checkbox" title="allow override mode" id="node-input-allowOverride"  ></input>
-        <label for="node-input-cycleDuration2"></i> update</label>
+        <label for="node-input-allowOverride"><i class="fa fa-chain-broken"></i> Allow manual</label>
+        <span><input type="checkbox" title="allow override mode" id="node-input-allowOverride"></input></span>
+        <label for="node-input-allowOverride2">update</label>
     </div>
     
     <div class="form-row">
